css: fix overflow in search result text

--- a/src/static/css/site.css
+++ b/src/static/css/site.css
@@ -620,6 +620,8 @@ summary .group-name {
 .wiki-search-result-text-area {
   align-self: center;
   flex-grow: 1;
+  min-width: 0;
+  overflow-wrap: break-word;
   padding-bottom: 2px;
 }
 
